--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,9 +3,9 @@
 html, body {
   height: 100%;
 }
-html body {
-  background-color: #f8fafb;
-}
+// html body {
+//   background-color: #f1f3f4;
+// }
 #__next{
   height: 100%;
 }
